--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.2.2",
-    "@usedapp/core": "^0.6.3"
+    "@ethersproject/contracts": "^5.5.0",
+    "@ethersproject/units": "^5.5.0",
+    "@material-ui/lab": "^4.0.0-alpha.60"
   }
 }
